# tanit-lang

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
compiler/tanitc/: Cargo.toml
compiler/tanitc/src/: main.rs  options.rs
compiler/tanitc_analyzer/: Cargo.toml
compiler/tanitc_analyzer/src/: ast.rs  lib.rs  scope.rs  symbol.rs  symbol_table.rs
compiler/tanitc_analyzer/src/ast/: aliases.rs  blocks.rs  branches.rs  control_flows.rs  enums.rs  expressions.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  types.rs  unions.rs  values.rs  variables.rs  variants.rs
compiler/tanitc_ast/: Cargo.toml
compiler/tanitc_ast/src/: attributes.rs  expression_utils.rs  lib.rs  name.rs  variant_utils.rs
compiler/tanitc_ast/src/ast/: aliases.rs  blocks.rs  branches.rs  control_flows.rs  enums.rs  expressions.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  types.rs  unions.rs  uses.rs  values.rs  variables.rs  variants.rs
compiler/tanitc_ast/src/program_ctx/: mod.rs  name_ctx.rs
compiler/tanitc_ast/src/program_ctx/statement_ctx/: attributes_ctx.rs  block_ctx.rs  mod.rs  use_ctx.rs
compiler/tanitc_ast/src/program_ctx/statement_ctx/branch_ctx/: mod.rs  (+4 more)
compiler/tanitc_ast/src/program_ctx/type_ctx/: array_type_ctx.rs  func_type_ctx.rs  mod.rs  named_type_ctx.rs  never_type_ctx.rs  ptr_type_ctx.rs  ref_type_ctx.rs  tuple_type_ctx.rs
compiler/tanitc_ast/src/visitor/: mod.rs
compiler/tanitc_ast/tests/: serializer_test.rs
compiler/tanitc_codegen/: Cargo.toml
compiler/tanitc_codegen/src/: ast.rs  lib.rs
compiler/tanitc_codegen/src/c_generator/: ast.rs  mod.rs
compiler/tanitc_codegen/src/c_generator/ast/: aliases.rs  blocks.rs  branches.rs  control_flows.rs  enums.rs  expressions.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  types.rs  unions.rs  uses.rs  values.rs  variables.rs  variants.rs
compiler/tanitc_crate/: Cargo.toml
compiler/tanitc_crate/src/: ast.rs  lib.rs
compiler/tanitc_crate/tests/: alias_def_test.rs  alias_test.rs  arrays_test.rs  blocks_test.rs  enums_test.rs  expressions_test.rs  externs_test.rs  functions_test.rs  main_func_test.rs  methods_test.rs  modules_test.rs  references_test.rs  structs_test.rs  tuples_test.rs  unions_test.rs  use_statement_test.rs  variables_test.rs  variants_test.rs
compiler/tanitc_hir_analyzer/: Cargo.toml
compiler/tanitc_hir_analyzer/src/: lib.rs
compiler/tanitc_hir_analyzer/src/hir/: blocks.rs  branches.rs  control_flows.rs  mod.rs  types.rs
compiler/tanitc_hir_analyzer/src/hir/definitions/: aliases.rs  enums.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  unions.rs  variables.rs  variants.rs
compiler/tanitc_hir_analyzer/src/hir/expressions/: binary.rs  call_expr.rs  conversion.rs  indexing.rs  literal.rs  member_access.rs  mod.rs  unary.rs
compiler/tanitc_hir_analyzer/src/symbol_table/: entry.rs  mod.rs  table.rs  type_info.rs
compiler/tanitc_hir_test/: Cargo.toml
compiler/tanitc_hir_test/src/: lib.rs
compiler/tanitc_ir_c/: Cargo.toml
compiler/tanitc_ir_c/src/: lib.rs
compiler/tanitc_ir_c/src/hir/: blocks.rs  branches.rs  control_flows.rs  expressions.rs  mod.rs  types.rs  uses.rs
compiler/tanitc_ir_c/src/hir/definitions/: aliases.rs  enums.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  unions.rs  variables.rs  variants.rs
compiler/tanitc_lib/: Cargo.toml
compiler/tanitc_lib/src/: lib.rs  parser.rs  unit.rs
compiler/tanitc_lib/src/analyzer/: mod.rs  scope.rs  symbol_table.rs
compiler/tanitc_lib/src/ast/: mod.rs
compiler/tanitc_lib/src/ast/aliases/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/branches/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs
compiler/tanitc_lib/src/ast/enums/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/expressions/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/functions/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/identifiers/: analyzer.rs  codegen.rs  mod.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/modules/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/scopes/: analyzer.rs  codegen.rs  parser.rs  serializer.rs
compiler/tanitc_lib/src/ast/structs/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/types/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serialyzer.rs
compiler/tanitc_lib/src/ast/values/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs
compiler/tanitc_lib/src/ast/variables/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/ast/variants/: analyzer.rs  codegen.rs  mod.rs  parser.rs  serializer.rs  tests.rs
compiler/tanitc_lib/src/parser/: lexer.rs  token.rs
compiler/tanitc_parser/: Cargo.toml
compiler/tanitc_parser/src/: ast.rs  grammar.rs  lib.rs
compiler/tanitc_parser/src/ast/: aliases.rs  attributes.rs  blocks.rs  branches.rs  control_flows.rs  enums.rs  expressions.rs  externs.rs  functions.rs  methods.rs  mod.rs  modules.rs  structs.rs  type_spec.rs  unions.rs  using.rs  values.rs  variables.rs  variants.rs
compiler/tanitc_parser/src/program_ctx/: mod.rs  name_ctx.rs
compiler/tanitc_parser/src/program_ctx/statements_ctx/: attributes_ctx.rs  block_ctx.rs  branch_ctx.rs  control_flow_ctx.rs  extern_ctx.rs  mod.rs  use_ctx.rs
compiler/tanitc_parser/src/program_ctx/type_ctx/: array_type_ctx.rs  func_type_ctx.rs  mod.rs  named_type_ctx.rs  never_type_ctx.rs  ptr_type_ctx.rs  ref_type_ctx.rs  tuple_type_ctx.rs
compiler/tanitc_serializer/: Cargo.toml
compiler/tanitc_serializer/src/: ast.rs  lib.rs
compiler/tanitc_serializer/src/ron_writer/: ast.rs  mod.rs
compiler/tanitc_serializer/src/xml_writer/: ast.rs  mod.rs
compiler/tanitc_serializer/tests/: ron_writer_test.rs  writer_test.rs  xml_writer_test.rs
(+275 files in other folders)
