[package]
name = "tanitc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanitc_ast = { path = "../tanitc_ast" }
tanitc_crate = { path = "../tanitc_crate" }
tanitc_options = { path = "../tanitc_options" }
