[package]
name = "tanitc_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanitc_ident = { path = "../tanitc_ident" }
tanitc_ty = { path = "../tanitc_ty" }
tanitc_ast = { path = "../tanitc_ast" }
tanitc_messages = { path = "../tanitc_messages" }
tanitc_lexer = { path = "../tanitc_lexer" }
tanitc_options = { path = "../tanitc_options" }
