[package]
name = "tanitc_crate"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1"

[dependencies]
lazy_static = "1.5.0"
tanitc_ast = { path = "../tanitc_ast" }
tanitc_lexer = { path = "../tanitc_lexer" }
tanitc_parser = { path = "../tanitc_parser" }
tanitc_codegen = { path = "../tanitc_codegen" }
tanitc_analyzer = { path = "../tanitc_analyzer" }
tanitc_serializer = { path = "../tanitc_serializer" }
tanitc_messages = { path = "../tanitc_messages" }
tanitc_ident = { path = "../tanitc_ident" }
tanitc_ty = { path = "../tanitc_ty" }
tanitc_options = { path = "../tanitc_options" }
