[package]
name = "tanitc_crate"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1"
tanitc_attributes = { path = "../tanitc_attributes" }

[dependencies]
tanitc_ast = { path = "../tanitc_ast" }
tanitc_lexer = { path = "../tanitc_lexer" }
tanitc_parser = { path = "../tanitc_parser" }
tanitc_codegen = { path = "../tanitc_codegen" }
tanitc_builder = { path = "../tanitc_builder" }
tanitc_analyzer = { path = "../tanitc_analyzer" }
tanitc_messages = { path = "../tanitc_messages" }
tanitc_ident = { path = "../tanitc_ident" }
tanitc_ty = { path = "../tanitc_ty" }
tanitc_options = { path = "../tanitc_options" }
