[package]
name = "tanitc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
tanitc_lexer = { path = "../tanitc_lexer" }
tanitc_parser = { path = "../tanitc_parser" }
tanitc_messages = { path = "../tanitc_messages" }
tanitc_serializer = { path = "../tanitc_serializer" }
tanitc_codegen = { path = "../tanitc_codegen" }
tanitc_ident = { path = "../tanitc_ident" }
