[package]
name = "tanitc_serializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanitc_ast = { path = "../tanitc_ast" }
tanitc_messages = { path = "../tanitc_messages" }
tanitc_ty = { path = "../tanitc_ty" }
tanitc_ident = { path = "../tanitc_ident" }
pretty_assertions = "1.4.1"
